--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,44 @@
 alabaster==0.7.12
 Babel==2.9.0
+beautifulsoup4==4.9.3
 certifi==2020.12.5
+cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
+colorama==0.4.4
+comtypes==1.1.9
+docopt==0.6.2
 docutils==0.16
 gTTS==2.2.2
 idna==2.10
 imagesize==1.2.0
 Jinja2==2.11.3
+Js2Py==0.71
 MarkupSafe==1.1.1
 mpyg321==1.1.0
 packaging==20.9
-PyAudio==0.2.11
+pathlib==1.0.1
+pipwin==0.5.1
+PyAudio @ file:///C:/Users/gusta/pipwin/PyAudio-0.2.11-cp38-cp38-win_amd64.whl
+pycparser==2.20
+pygame==2.0.1
+pyglet==1.5.16
 Pygments==2.8.1
+pyjsparser==2.7.1
+pynput==1.7.3
 pyparsing==2.4.7
+pypiwin32==223
+PyPrind==2.11.2
+pySmartDL==1.3.4
 pyttsx==1.1
 pyttsx3==2.90
 pytz==2021.1
+pywin32==300
 requests==2.25.1
 six==1.15.0
 snowballstemmer==2.1.0
+sounddevice==0.4.1
+soupsieve==2.2.1
 SpeechRecognition==3.8.1
 Sphinx==3.5.4
 sphinxcontrib-applehelp==1.0.2
@@ -28,4 +47,5 @@ sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
+tzlocal==2.1
 urllib3==1.26.4
